# Fairy-Kekkai-Workshop

./: .gitignore  CNAME  DEVELOPMENT.md  Fairy-Kekkai-Workshop.iss  Fairy-Kekkai-Workshop.pro  Fairy-Kekkai-Workshop.py  PADDLEOCR  README.md  README.zh.md  build-deb.sh  build_ci.py  deploy.py  fairy-kekkai-workshop_2.0.0_amd64.deb  release.py  requirements.txt
.github/workflows/: build-ci.yml  deploy-docs.yml  sync-gitea-mirror.yml  sync-gitea-release.yml
app/common/: config.py  event_bus.py  logger.py  setting.py  startup_handler.py  task_status.py  text.py
app/components/: base_function_interface.py  base_stacked_interface.py  base_task_card.py  base_task_interface.py  config_card.py  dialog.py  download_card.py  floating_window.py  info_card.py  infobar.py  pager.py  project_card.py  sample_card.py  system_tray.py  task_card.py  teaching_tips.py
app/resource/: resource.qrc  resource_rc.py
app/resource/i18n/: app.de_DE.qm  app.de_DE.ts  app.en_US.qm  app.en_US.ts  app.es_ES.qm  app.es_ES.ts  app.fr_FR.qm  app.fr_FR.ts  app.ja_JP.qm  app.ja_JP.ts  app.ko_KR.qm  app.ko_KR.ts  app.pt_BR.qm  app.pt_BR.ts  app.zh_TW.qm  app.zh_TW.ts
app/service/: donwload_list_service.py  download_service.py  ffmpeg_service.py  ocr_service.py  project_service.py  release_service.py  srt_service.py  translate_service.py  version_service.py  video_service.py  whisper_service.py
app/service/CLI/: deploy.py  test.py  videocr_cli.py
app/service/CLI/paddleocr/: .clangd  CMakeLists.txt  cvutils_api.h  cvutils_compat.h  dbcrnn.cpp  dbcrnn.hpp  deviceinfo.hpp  localocr.cpp  main.cpp  ortwrapper.hpp  shared.cpp  shared.hpp
app/service/CLI/videocr/: api.py  lang_dictionaries.py  models.py  utils.py  video.py
app/service/CLI/whisper/Examples/main/: main.cpp  params.cpp  params.h
app/service/CLI/whisper/Whisper/: ContextImpl.cpp
app/service/CLI/whisper/source.compat/: convertThings.cpp
app/view/: download_interface.py  ffmpeg_interface.py  ffmpeg_task_interface.py  home_interface.py  log_interface.py  main_window.py  project_detail_interface.py  project_interface.py  release_interface.py  release_task_interface.py  setting_interface.py  translate_interface.py  translate_task_interface.py  videocr_interface.py  videocr_task_interface.py  whisper_interface.py  whisper_task_interface.py
aur-package/: PKGBUILD  fairy-kekkai-workshop.install
debian_package/DEBIAN/: control  postinst  prerm
docs/: docs.html  download.html  guide.html  index.html  workflow.html
docs/css/: style.css
docs/js/: main.js
packaging/: fairy-kekkai-workshop.desktop
